--- a/package.json
+++ b/package.json
@@ -9,5 +9,72 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Centell <centell@me.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run lint",
+      "git add"
+    ]
+  },
+  "eslintConfig": {
+    "env": {
+      "commonjs": true,
+      "es6": true,
+      "node": true,
+      "mocha": true,
+      "browser": true
+    },
+    "extends": [
+      "airbnb-base"
+    ],
+    "globals": {
+      "Atomics": "readonly",
+      "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+      "ecmaVersion": 2020,
+      "sourceType": "module"
+    },
+    "rules": {
+      "semi": [
+        "error",
+        "always"
+      ],
+      "indent": [
+        "error",
+        2,
+        {
+          "SwitchCase": 1
+        }
+      ],
+      "no-unused-vars": [
+        "error",
+        {
+          "argsIgnorePattern": "^next$|^res|Sequelize"
+        }
+      ],
+      "import/no-unresolved": "off",
+      "arrow-body-style": "off",
+      "object-curly-newline": "off",
+      "max-len": "warn",
+      "no-restricted-syntax": "warn",
+      "no-use-before-define": "off",
+      "camelcase": "warn",
+      "space-before-function-paren": "off",
+      "consistent-return": "warn",
+      "arrow-parens": "off"
+    }
+  },
+  "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.3",
+    "husky": "^4.3.8",
+    "lint-staged": "^11.0.0"
+  }
 }
