--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "daily-pomodoro",
+  "name": "firefox-extension-init",
   "version": "1.0.0",
-  "description": "Pomodoro timer",
+  "description": "firefox extension demo",
   "icons": {
     "48": "icons/border-48.png"
   },
   "scripts": {
+    "build": "npm run clean && npm run instal-polyfill && cd src && zip -r ../extension.zip . -x */.*",
     "clean": "rm -rf extension.zip",
-    "build": "npm run install-polyfill",
-    "install-polyfill": "cp node_modules/webextension-polyfill/dist/browser-polyfill.min.js src/lib/webextension-polyfill/",
-    "pack": "npm run clean && npm run build && cd src && zip -r ../extension.zip . -x */.gitkeep",
+    "install-polyfill": "cp node_modules/webextension-polyfill/dist/browser-polyfill.min.js src/lib/",
     "lint": "./node_modules/.bin/eslint --ignore-path .eslintignore . --fix"
   },
   "author": "Centell <centell@me.com>",
