--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "npm run clean && npm run instal-polyfill && cd src && zip -r ../extension.zip . -x */.*",
     "clean": "rm -rf extension.zip",
     "install-polyfill": "cp node_modules/webextension-polyfill/dist/browser-polyfill.min.js src/lib/",
-    "lint": "./node_modules/.bin/eslint --ignore-path .eslintignore . --fix"
+    "lint": "./node_modules/.bin/eslint --ignore-path .eslintignore . --fix",
+    "dev": "cd src && web-ext run --firefox=/Applications/Firefox\\ Developer\\ Edition.app/Contents/MacOS/firefox-bin"
   },
   "author": "Centell <centell@me.com>",
   "license": "MIT",
