--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firefox-extension-init",
+  "name": "firefox-extension-demo",
   "version": "1.0.0",
   "description": "firefox extension demo",
   "icons": {
